@@ -7,6 +7,8 @@ Revision history for Perl extension RPi::WiringPi.
         - test fixes/updates
         - t/RPiTest.pm now checks whether the serial pins (14, 15) are in alt
           mode 4 (default) or 2 (bluetooth disabled)
+        - add blurb in FAQ and POD about lowering I2C bus speed if using I2C
+          with an Arduino (closes #61)
 
 2.3621  2017-10-03
         - removed the test/images and images/ directory from the repo
